# anime-rust-iced

./: Cargo.toml  README.md
src/: lib.rs  main.rs
