[package]
name = "anime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckdb = { version = "1.3.0", features = ["bundled"] }
error-chain = "0.12.4"
iced = "0.12.1"
reqwest = { version = "0.12.0", features = ["blocking"] }
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = "1.36.0"
